--- a/project/SPTarkov.Launcher/Components/Profiles/ProfileCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Profiles/ProfileCardComponent.razor
@@ -5,8 +5,8 @@
 @inject ILogger<ProfileCardComponent> Logger
 @inject LocaleHelper LocaleHelper
 
-<MudItem sm="12" md="4">
-    <MudPaper Elevation="2" Class="pa-4 d-flex flex-column flex-none gap-2 mud-background-gray border-2 border-solid mud-border-lines-default card-container">
+<MudItem sm="4">
+    <MudPaper Elevation="2" Class="pa-4 d-flex flex-column flex-none gap-2 mud-background-gray border-2 border-solid mud-border-lines-default card-container info-card-height">
         <div class="card-overflow">
             @if (!sideIsUnknown)
             {
@@ -24,41 +24,36 @@
         <MudDivider DividerType="DividerType.Middle"/>
         <MudText Class="mb-n3 no-pointers no-select" Typo="Typo.caption">@(LocaleHelper.Get("profile_card_id")):</MudText>
         <MudText Typo="Typo.body1">@MiniProfile.ProfileID</MudText>
-        <MudContainer Class="justify-end d-flex pa-0">
-            @if (MiniProfile.HasPassword)
-            {
-                <MudTooltip Arrow="true" Placement="Placement.Right" Text="@(LocaleHelper.Get("profile_card_password"))">
-                    <MudIconButton Color="Color.Tertiary" Icon="@Icons.Material.Filled.Lock" Size="Size.Small"/>
+        @if (!HideButtons)
+        {
+            <MudContainer Class="justify-end d-flex pa-0">
+
+                @if (!MiniProfile.InvalidOrUnloadableProfile)
+                {
+                    <MudTooltip Arrow="true" Placement="Placement.Left" Text="@(loggedIn ? LocaleHelper.Get("profile_card_logout") : LocaleHelper.Get("profile_card_login"))">
+                        <MudIconButton Class="mr-1" Color="Color.Success" Icon="@(!loggedIn ? Icons.Material.Filled.Login : Icons.Material.Filled.Logout)" Size="Size.Small" @onclick="RunLoginTask"/>
+                    </MudTooltip>
+                }
+                else
+                {
+                    <MudTooltip Arrow="true" Color="Color.Error" Placement="Placement.Left" Text="@(LocaleHelper.Get("profile_card_invalid"))">
+                        <MudIconButton Class="mr-1" Color="Color.Error" Icon="@Icons.Material.Filled.Recycling" Size="Size.Small"/>
+                    </MudTooltip>
+                }
+
+                <MudTooltip Arrow="true" Placement="Placement.Left" Text="@(LocaleHelper.Get("profile_card_delete"))">
+                    <MudIconButton Color="Color.Error" Icon="@Icons.Material.Filled.Delete" Size="Size.Small" @onclick="RunDeleteTask"/>
                 </MudTooltip>
-                <MudSpacer/>
-            }
 
-            @if (!MiniProfile.InvalidOrUnloadableProfile)
-            {
-                <MudTooltip Arrow="true" Placement="Placement.Left" Text="@(loggedIn ? LocaleHelper.Get("profile_card_logout") : LocaleHelper.Get("profile_card_login"))">
-                    <MudIconButton Class="mr-1" Color="Color.Success" Icon="@(!loggedIn ? Icons.Material.Filled.Login : Icons.Material.Filled.Logout)" Size="Size.Small" @onclick="RunLoginTask"/>
-                </MudTooltip>
-            }
-            else
-            {
-                <MudTooltip Arrow="true" Color="Color.Error" Placement="Placement.Left" Text="@(LocaleHelper.Get("profile_card_invalid"))">
-                    <MudIconButton Class="mr-1" Color="Color.Error" Icon="@Icons.Material.Filled.Recycling" Size="Size.Small"/>
-                </MudTooltip>
-            }
-
-            <MudTooltip Arrow="true" Placement="Placement.Left" Text="@(LocaleHelper.Get("profile_card_edit"))">
-                <MudIconButton Color="Color.Default" Icon="@Icons.Material.Filled.Build" Size="Size.Small" @onclick="RunEditTask"/>
-            </MudTooltip>
-
-            <MudTooltip Arrow="true" Placement="Placement.Left" Text="@(LocaleHelper.Get("profile_card_delete"))">
-                <MudIconButton Color="Color.Error" Icon="@Icons.Material.Filled.Delete" Size="Size.Small" @onclick="RunDeleteTask"/>
-            </MudTooltip>
-
-        </MudContainer>
+            </MudContainer>
+        }
     </MudPaper>
 </MudItem>
 
 @code {
+    [Parameter]
+    public bool HideButtons { get; set; }
+
     [Parameter]
     public MiniProfile MiniProfile { get; set; }
 
@@ -134,28 +129,6 @@
         };
 
         var dialog = await DialogService.ShowAsync<ProfileRemoveDialog>("ProfileRemoveDialog", dialogParams, ConfigHelper.DialogOptions);
-        var result = await dialog.Result;
-
-        if (result?.Canceled is false)
-        {
-            ProfileList = StateHelper.ProfileList;
-            await ProfileListChanged.InvokeAsync(ProfileList);
-        }
-    }
-
-    private async Task RunEditTask()
-    {
-        StateHelper.SelectedProfile = null;
-        loggedIn = false;
-
-        var dialogParams = new DialogParameters
-        {
-            {
-                "MiniProfile", MiniProfile
-            }
-        };
-
-        var dialog = await DialogService.ShowAsync<ProfileEditDialog>("ProfileEditDialog", dialogParams, ConfigHelper.DialogOptions);
         var result = await dialog.Result;
 
         if (result?.Canceled is false)
