more profile page wip

--- a/project/SPTarkov.Launcher/Components/Profiles/Profile/ProfileStatsComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Profiles/Profile/ProfileStatsComponent.razor
@@ -4,14 +4,14 @@
             <MudContainer>
                 <MudContainer Class="d-flex flex-row justify-space-between">
                     <ProfileStatsSubColComponent P1="Raids" P1value="2" P2="Run Through" P2value="2"/>
-                    <ProfileStatsSubColComponent P1="Survived" P1value="2" P2="Survival Rate" P2value="100%"/>
-                    <ProfileStatsSubColComponent P1="KIA" P1value="2" P2="Average Life Span" P2value="00:00"/>
+                    <ProfileStatsSubColComponent P1="Survived" P1value="2" P2="AWOL" P2value="2"/>
+                    <ProfileStatsSubColComponent P1="KIA" P1value="2" P2="MIA" P2value="2"/>
                     <ProfileStatsSubColComponent P1="Kills" P1value="2" P2="KD" P2value="2"/>
                 </MudContainer>
                 <MudDivider DividerType="DividerType.Middle" Class="my-2"/>
                 <MudContainer Class="d-flex flex-row justify-space-between">
-                    <ProfileStatsSubColComponent P1="AWOL" P1value="2" P2="Leave Rate" P2value="0%"/>
-                    <ProfileStatsSubColComponent P1="MIA" P1value="2" P2="Survivals in a row" P2value="2"/>
+                    <ProfileStatsSubColComponent P1="Survival Rate" P1value="100%" P2="Leave Rate" P2value="0%"/>
+                    <ProfileStatsSubColComponent P1="Average Life Span" P1value="00:00" P2="Survivals in a row" P2value="2"/>
                     <ProfileStatsSubColComponent P1="Online" P1value="0H00M" P2="Account Lifetime" P2value="0H48M"/>
                 </MudContainer>
             </MudContainer>
