--- a/project/SPTarkov.Launcher/Components/Profiles/ProfileCardComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Profiles/ProfileCardComponent.razor
@@ -114,8 +114,8 @@
             StateHelper.SetSelectedProfile(MiniProfile);
             loggedIn = StateHelper.SelectedProfile != null;
 
-            Logger.LogInformation("Navigating to /Profile");
-            NavigationManager.NavigateTo("/Profile");
+            Logger.LogInformation("Navigating to /ServerPageWrapper");
+            NavigationManager.NavigateTo("/ServerPageWrapper");
         }
     }
 
