--- a/project/SPTarkov.Launcher/Shared/MainLayout.razor
+++ b/project/SPTarkov.Launcher/Shared/MainLayout.razor
@@ -9,13 +9,11 @@
 <MudSnackbarProvider/>
 <MudDialogProvider/>
 <MudFab id="scrollTopBtn" Color="Color.Primary" StartIcon="@Icons.Material.Filled.ArrowCircleUp" Class="fixed z-90" Style="bottom: 10px; right: 10px; display: none;" @onclick="ScrollToTop" Size="Size.Small"/>
-@if (StateHelper.ShowBackground)
-{
-    <MudContainer Class="no-select overlay-container unset absolute">
-        <MudImage Src="./bg.png" Class="no-select fixed mud-height-full mud-width-full background-image-cover"/>
-        <div class="no-select fixed mud-height-full mud-width-full background-overlay"></div>
-    </MudContainer>
-}
+
+<MudContainer Class=@(StateHelper.ShowBackground ? backgroundEnabled : backgroundDisabled) >
+    <MudImage Src="./bg.png" Class="no-select fixed mud-height-full mud-width-full background-image-cover"/>
+    <div class="no-select fixed mud-height-full mud-width-full background-overlay"></div>
+</MudContainer>
 
 <MudLayout>
     <MudDrawer Width="150px" ClipMode="DrawerClipMode.Never" Elevation="5" Variant="@DrawerVariant.Mini" OpenMiniOnHover="false" Breakpoint="Breakpoint.None" Class="mud-background-gray border-r-2 border-solid mud-border-lines-default">
@@ -27,6 +25,10 @@
 </MudLayout>
 
 @code {
+
+    private readonly string backgroundDisabled = "no-select overlay-container unset absolute d-none";
+    private readonly string backgroundEnabled = "no-select overlay-container unset absolute";
+
     protected override void OnInitialized()
     {
         StateHelper.OnStateChanged += StateHasChanged;
